<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

        
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hello" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewConnStatsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="Connection status" />

        <TextView
            android:id="@+id/textViewConnectionStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/connectionStatus"
            android:textColor="#ff0000" />

        <Button
            android:id="@+id/idButtonConnect"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/textButonConnect" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="Your name" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/connectedName" />


        <Button
            android:id="@+id/idButtonProducts"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/textButonProducts" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="fill_parent"
        android:layout_height="147dp" >
        
        <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical" >
	
        <RelativeLayout
        android:id="@+id/relativeLayout11"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
         <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="Connected clients" />   
            </RelativeLayout> 
    <RelativeLayout
        android:id="@+id/relativeLayout12"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:background="@drawable/border">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="Name" />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Username" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"     
            android:text="Account" />

    </RelativeLayout>         
          <GridView
            android:id="@+id/gridViewUserList"
            android:layout_width="fill_parent"
            
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true"
           
            android:background="@drawable/border"
            android:numColumns="1" >
        </GridView>
         </LinearLayout>
         

    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
         <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="Chat to: " />  
		<TextView
		    android:id="@+id/textViewSendChatTo"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentTop="true"
		    android:layout_toRightOf="@+id/textView2"
		    android:text=" ALL " />
		
	    <ScrollView
	    android:id="@+id/ScrollViewChat"  
	    android:layout_width="fill_parent" 
	    android:layout_height="fill_parent"
	    android:background="@drawable/border"
	    android:layout_above="@+id/editTextChat"
	    android:layout_marginBottom="10dp"
	    android:layout_below="@+id/textView2">
        <TextView
            android:id="@+id/textViewChat"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
		    </ScrollView>
		    
    
        <LinearLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" />

		<EditText
		    android:id="@+id/editTextChat"
		    android:layout_width="fill_parent"
		    android:layout_height="70dp"
		    android:layout_alignParentBottom="true"
		    android:layout_toLeftOf="@+id/buttonSend" >

        </EditText>


		<Button
		    android:id="@+id/buttonSend"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentBottom="true"
		    android:layout_alignParentRight="true"
		    android:layout_alignTop="@+id/editTextChat"
		    android:text="Send" />


        
    </RelativeLayout>
  
</LinearLayout>